--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <h1>Мой сайт</h1>
     <h2>Делал сам честно!</h2>
-    <div class="button-tea" onclick="alert('скинуть на чай: +79216274225 сбербанк')">Нажми! </div>
+    <div class="button-tea" onclick="alert('скинуть на чай будущему программисту: +79216274225 сбербанк')">Нажми! </div>
 
     <div class="game-box">
         <h3>чат (прототип номер 3)</h3>
@@ -173,4 +173,5 @@
     </script>
 </body>
 </html>
+
 
