--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="button-tea" id="btn-tea" onclick="alert('скинуть на чай будущему программисту:\n+79216274225 Сбербанк')">Нажми!</div>
 
     <div class="game-box">
-        <h3 id="h-chat">чат (прототип номер 3)</h3>
+        <h3 id="h-chat">чат (прототип номер 4)</h3>
         <div id="cList"></div>
         <div class="chat-input-area">
             <input type="text" id="nInp" placeholder="Имя" style="width: 80px;">
@@ -236,7 +236,7 @@
         function addScore() { 
             count++; 
             document.getElementById('score').innerText = count; 
-            if(count === 100) alert("100 кликов! Иди потрогай траву, задрот! 😂");
+            if(count === 100) alert("100 кликов! Иди потрогай траву, задрот! ");
         }
 
         // Змейка
@@ -280,3 +280,4 @@
 </body>
 </html>
                
+
